The word "selector" is somewhat redundant redundantly used in SelectorChecker. https://bugs.webkit.org/show_bug.cgi?id=106413

In https://bugs.webkit.org/show_bug.cgi?id=105864, Antti suggested reducing some of the redundant uses of the word
"selector" in SelectorChecker. Here's a start.

Reviewed by Antti Koivisto.

Simple renames, no change in behavior.

* css/SelectorChecker.cpp:
(WebCore::SelectorChecker::match): Renamed.
(WebCore):
(WebCore::SelectorChecker::fastCheck): Ditto,
(WebCore::SelectorChecker::checkOne): Ditto.
* css/SelectorChecker.h:
(SelectorChecker):
* css/StyleResolver.cpp:
(WebCore::StyleResolver::collectMatchingRulesForList): Changed to use new name.
(WebCore::StyleResolver::ruleMatches): Renamed from checkSelector to better match argument and return value.
(WebCore::StyleResolver::checkRegionSelector): Changed to use new names.
* css/StyleResolver.h:
(StyleResolver):
* dom/SelectorQuery.cpp:
(WebCore::SelectorDataList::matches): Ditto.
(WebCore::SelectorDataList::execute): Ditto.
* html/shadow/ContentSelectorQuery.cpp:
(WebCore::ContentSelectorChecker::checkContentSelector): Ditto.


Canonical link: https://commits.webkit.org/124830@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@139406 268f45cc-cd09-0410-ab3c-d52691b4dbfc